Pages for the website

--- a/Shows.html
+++ b/Shows.html
@@ -7,10 +7,10 @@
         <link href="css/colour.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Log In</title> 
+        <title>Shows</title> 
     </head>
     <body>
-        <div class="logIn-page">
+        <div class="shows-page">
             <header class="main-header">
                 <img src="img/litGalleryLogo.png" alt="Logo"/>
                 <div class="nav">
@@ -20,32 +20,41 @@
                         <a href="Home.html">Home</a>
                         <a href="Gallery.html">Gallery</a>
                         <a href="Shows.html">Shows</a>
+                        <a href="Admin.html">Admin</a>
+                        <a href="Profile.html">Profile</a>
                         <a href="SignUp.html">Sign Up</a>
                         <a href="LogIn.html">Log In</a> 
                     </div>
-                </div>    
-            </header>
-            <div class="logIn">
+                </div>
+            </header> 
+                <div class="grid-container">
 
-                
-                <form>
-                    <h1>Welcome back</h1>
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email"><br>
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" id="password"><br>
-                    <input type="submit" value="Log In">
-                    <h6>Or</h6>
-                    <input type="submit" value="Sign Up">
-                    
-                </form>
-            </div> 
+                <div class="item2">
+                    <form>
+                        <label for="img">Images:</label>
+                        <input type="checkbox" name="img" id="img"><br>
+                        <label for="video">Video:</label>
+                        <input type="checkbox" name="video" id="video">
+                    </form>
+                </div>
+                <div class="item3">  
+
+                    <div class="gallery-page"> 
+
+                        <img src="img/Sample1.png" alt="Sample1" />
+
+                        <img src="img/Sample2.jpg" alt="Sample2"/>
+
+                        <img src="img/Sample3.jpg" alt="Sample3" />
+
+                        <img src="img/Sample4.PNG" alt="Sample4" />
+
+                    </div>
+                </div> 
+            </div>
         </div>
         <div class="footer">
             <footer></footer>
         </div>
     </body>
 </html>
-
-
-
