--- a/SignUp.html
+++ b/SignUp.html
@@ -6,7 +6,7 @@
         <link href="css/font.css" rel="stylesheet" type="text/css">
         <link href="css/colour.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--        <link href="fonts/OpenSans-Regular.ttf" rel="fonts" type="text/css">-->
+
         <title>Sign Up</title> 
     </head>
     <body>
@@ -19,7 +19,7 @@
                     <div class="menu">
                         <a href="Home.html">Home</a>
                         <a href="Gallery.html">Gallery</a>
-                        <a href="#">Shows</a>
+                        <a href="Shows.html">Shows</a>
                         <a href="SignUp.html">Sign Up</a>
                         <a href="LogIn.html">Log In</a> 
                     </div>
