--- a/Update.html
+++ b/Update.html
@@ -6,46 +6,43 @@
         <link href="css/font.css" rel="stylesheet" type="text/css">
         <link href="css/colour.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!--        <link href="fonts/OpenSans-Regular.ttf" rel="fonts" type="text/css">-->
         <title>Log In</title> 
     </head>
     <body>
-        <div class="logIn-page">
+        <div class="signUp-page">
             <header class="main-header">
                 <img src="img/litGalleryLogo.png" alt="Logo"/>
                 <div class="nav">
                     <label for="toggle">&#9776;</label>
                     <input type="checkbox" id="toggle"/>
                     <div class="menu">
+<!--                        <br><br>-->
                         <a href="Home.html">Home</a>
                         <a href="Gallery.html">Gallery</a>
-                        <a href="Shows.html">Shows</a>
                         <a href="SignUp.html">Sign Up</a>
                         <a href="LogIn.html">Log In</a> 
                     </div>
-                </div>    
+                </div>
             </header>
-            <div class="logIn">
-
-                
-                <form>
-                    <h1>Welcome back</h1>
+            <div class="update">
+            <form>
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email"><br>
+                    <label for="email">Username:</label>
+                    <input type="text" name="username" id="username"><br>
                     <label for="password">Password:</label>
                     <input type="password" name="password" id="password"><br>
-                    <input type="submit" value="Log In">
-                    <h6>Or</h6>
-                    <input type="submit" value="Sign Up">
+                    <label for="F_name">FirstName:</label>
+                    <input type="text" name="F_name" id="F_name"><br>
+                    <label for="L_name">LastName:</label>
+                    <input type="text" name="L_name" id="L_name"><br>
+                    <label for="course">Course:</label>
+                    <input type="text" name="ecourse" id="course"><br>
+                    <input type="submit" value="Update">
                     
                 </form>
             </div> 
         </div>
-        <div class="footer">
-            <footer></footer>
-        </div>
     </body>
 </html>
-
-
-
