--- a/SignUp.html
+++ b/SignUp.html
@@ -6,8 +6,8 @@
         <link href="css/font.css" rel="stylesheet" type="text/css">
         <link href="css/colour.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>Sign Up</title> 
+<!--        <link href="fonts/OpenSans-Regular.ttf" rel="fonts" type="text/css">-->
+        <title>Log In</title> 
     </head>
     <body>
         <div class="signUp-page">
@@ -17,15 +17,15 @@
                     <label for="toggle">&#9776;</label>
                     <input type="checkbox" id="toggle"/>
                     <div class="menu">
+<!--                        <br><br>-->
                         <a href="Home.html">Home</a>
                         <a href="Gallery.html">Gallery</a>
-                        <a href="Shows.html">Shows</a>
                         <a href="SignUp.html">Sign Up</a>
                         <a href="LogIn.html">Log In</a> 
                     </div>
                 </div>
             </header>
-            <div class="signUp">
+            <div class="logIn">
             <form>
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email"><br>
