--- a/Update.html
+++ b/Update.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </header>
-            <div class="update">
+            <div class="logIn">
             <form>
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email"><br>
