--- a/Shows.html
+++ b/Shows.html
@@ -31,11 +31,9 @@
 
                 <div class="item2">
                     <form>
-                        <label for="img">Illustration:</label>
+                        <label for="img">Images:</label>
                         <input type="checkbox" name="img" id="img"><br>
-                        <label for="video">Interactive Digital Media:</label>
-                        <input type="checkbox" name="video" id="video">
-                        <label for="video">Creative Multimedia:</label>
+                        <label for="video">Video:</label>
                         <input type="checkbox" name="video" id="video">
                     </form>
                 </div>
